# Market-Data-Simulator-Strategy-Sandbox

./: CMakeLists.txt  README.md
config/: default_config.json
src/: main.cpp
src/core/: Types.hpp
src/exchange/: ExchangeSimulator.hpp  OrderBook.hpp
src/market/: SyntheticGenerator.hpp
src/metrics/: MetricsRecorder.hpp
src/portfolio/: Portfolio.hpp
src/risk/: RiskEngine.hpp
src/simulation/: SimConfig.hpp  SimulationEngine.hpp
src/strategy/: MarketMaker.hpp  MeanReversion.hpp  Momentum.hpp  Strategy.hpp
